src/test/deca/codegen/invalid/absenceReturn.deca
class A {
    float function() {
        int x = 6;
    }
}

{
    A a = new A();
    float x = a.function();
}
//ERROR Error : function without return.